3.1.2 Fri Feb 08 2013
  - Fix tests failing when publican not installed. BZ #908956
  - Fix broken mr-IN/Conventions.po. BZ #908956

3.1.1 Thu Feb 07 2013
  - Fix web site CSS for admonitions breaking layout for books built on P3.0. BZ #908539

3.1.0 Wed Feb 06 2013
  - Add Interlingua support from Nik Kalach <nik.kalach@inbox.ru> BZ #863899
  - Replace hard coded paths with Publican::ConfigData. BZ #661946
  - Ensure Publican source builds and tests without Publican being installed. BZ #874180
  - Fix broken menu alignment. BZ #880621
  - Ensure clean_ids doesn't change owner or group. BZ #854425
  - Fix incorrect Revision order. BZ #845432
  - Add OpenSuse Install Section by Norman Dunbar <norman@dunbar-it.co.uk>. BZ #787243
  - Fix POD typos. BZ #874277
  - Remove place holder P tag from HTML para. BZ #847206
  - Allow brands to override DocType Type and URI. BZ #839128
  - Ignore unexpected parameters in cfg file, and emit a message. BZ #875021
  - Support scripts directory in brands. BZ #839975
  - Remove hard coded border from tables. BZ #875967
  - Allow menu_category to be localisable. BZ #872432
  - Fix UTF8 in brand_path breaking build. BZ #875021
  - Support wkhtmltopdf cover pages. BZ #874344
  - Add support for book_templates in brands. BZ #874344
  - Fix draft not appearing in PDF. BZ #873586
  - Change some H tags to DIV. BZ #846899
  - Remove DocBook TOCs from PDF. BZ #874795
  - Use better TOC for PDF. BZ #879388
  - Fix directory ownership in SPEC file. BZ #894522
  - Fix link resloution. BZ #879388

3.0.0  Wed Oct 31 2012
  - Update Changes file. BZ #661568
  - Cleaned up README file.
  - Corrected document conventions text. BZ#651616
  - Make XmlClean use File::Inplace instead of grep & sed. BZ #661567
  - Deleted STRICT mode. Added banned_tags and banned_attrs configurations. BZ #663202
  - Fix command example in PUG. BZ #663211
  - Use revision history for edition and release. BZ #642127