@@ -1183,9 +1183,18 @@ sup {
 
 .footnote sup  {
 	color:#e3dcc0;
-	position:absolute;
 	left: .4em;
 }
+
+.footnote .para sup  {
+	position:absolute;
+}
+
+a.footnote {
+	padding-right: 0.5em;
+	text-decoration:none;
+	border: none;
+} 
 
 .footnote sup a:link, 
 .footnote sup a:visited {
